# chad

./: Cargo.toml
compiler/: ext.rs  init.rs  main.rs  test.chad
compiler/ast/: generation.rs  mod.rs  var_input.rs
compiler/astgen/: imp.rs  mod.rs  var_input.rs
compiler/lexer/: imp.rs  mod.rs  tokenizer.rs
