[package]
name = "chad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# llvm-sys = "140"
llvm-sys = { version = "140", features = ["prefer-dynamic"] }

[[bin]]
name = "µsc"
path = "compiler/main.rs"

[profile.release]
lto = true
