[package]
name = "chad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0-prefer-dynamic"] }

[[bin]]
name = "chadc"
path = "compiler/main.rs"

[profile.release]
lto = true
